# qingyuan-new-life-backend

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0d9f2a7c520b_add_resource_service_link_table.py  10dfe46315c7_initial_migration_with_ulids.py  7e22940322c0_add_password_hash_to_user_model.py  8d1f74d6f0a2_enhance_shift_metadata.py  99c6fa7d57cc_make_user_nickname_and_phone_nullable.py  b320f522791a_backfill_shift_metadata.py  c62fdbda15e6_create_social_accounts_table_for_multi_.py  cb030248aed2_v6_arch_add_shift_table_for_technician_.py  d1cfe2c1b6d8_add_technician_policy_and_pricing.py  e6b7c91a4a74_set_default_for_resource_type.py  f6528ee22667_v4_arch_separate_technician_and_.py
src/: main.py
src/core/: config.py  database.py  funboost_config.py
src/modules/admin/: README.md  router.py  schemas.py
src/modules/auth/: README.md  router.py  schemas.py  security.py  service.py  tasks.py
src/modules/schedule/: README.md  business_rules.py  cache.py  router.py  schemas.py  service.py
src/modules/test/: README.md  router.py
src/modules/users/: README.md  router.py
src/shared/: README.md
src/shared/models/: __init__.py  appointment_models.py  resource_models.py  schedule_models.py  user_models.py
